--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "trading-dashboard-render",
+  "name": "trading-dashboard",
   "version": "2.0.0",
-  "description": "Trading Dashboard with Render + Turso (Free Forever)",
+  "description": "Trading Dashboard with Supabase",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "@libsql/client": "^0.5.6",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   }
 }
